find_package(Boost 1.47.0 COMPONENTS program_options REQUIRED)
add_executable(pkgfs-main main.cpp commandpkg.cpp commandhelp.cpp)
set_target_properties(pkgfs-main PROPERTIES OUTPUT_NAME pkgfs)
install(TARGETS pkgfs-main RUNTIME DESTINATION bin)
set_property(TARGET pkgfs-main PROPERTY CXX_STANDARD 11)
target_link_libraries(pkgfs-main ${Boost_LIBRARIES})
